--- a/style.css
+++ b/style.css
@@ -1,6 +1,9 @@
 @import url("./styles/header.css");
 @import url("./styles/banner.css");
 @import url("./styles/carrossel.css");
+@import url("./styles/topicos.css");
+@import url("/styles/contato.css");
+@import url("/styles/footer.css");
 
 :root {
   --cor-fundo: #ebecee;
@@ -8,6 +11,8 @@
   --laranja: #eb9b00;
   --azul-degrade: linear-gradient(97.54deg, #002f52 35.49%, #326589 165.37%);
   --fonte-principal: "Poppins", sans-serif;
+  --sombra-cards: 0px 4px 4px rgba(0, 0, 0, 0.25);
+  --azul-card: #002f52;
 }
 
 body {
