--- a/styles/carrossel.css
+++ b/styles/carrossel.css
@@ -21,3 +21,64 @@
   position: initial;
   padding: 0.7em 0;
 }
+
+.card__descricao {
+  display: flex;
+  justify-content: space-between;
+  margin-bottom: 0.5em;
+}
+
+.botoes {
+  display: flex;
+}
+
+.card__botoes{
+  display: flex;
+  justify-content: space-between;
+}
+
+.card {
+  background-color: var(--branco);
+  box-shadow: var(--sombra-cards);
+  border-radius: 10px;
+  margin: 1.5em;
+  padding: 1em;
+}
+
+.descricao__titulo {
+  font-weight: 700;
+  color: var(--laranja);
+}
+
+.descricao__titulo-livro {
+  font-weight: 700;
+  font-size: 18px;
+  color: var(--azul-card);
+  margin: 0.5em 0;
+}
+
+.descricao__texto {
+  font-size: 14px;
+}
+
+.botoes__link {
+  font-weight: 700;
+  color: var(--branco);
+  text-align: center;
+  padding: 0.75em 2.3em;
+  background-color: var(--laranja);
+  text-decoration: none;
+}
+
+.botoes__item {
+  margin: 0 0.5em;
+}
+
+.voto {
+  display: flex;
+  margin-bottom: 0.5em;
+}
+
+.voto__decoracao {
+  margin: 0 0.1em 0 0;
+}
